Reverts overflow behavior. Fix overflowing content

--- a/packages/ui-shared/src/Dialog/style.scss
+++ b/packages/ui-shared/src/Dialog/style.scss
@@ -6,6 +6,10 @@
   max-height: 90%;
   background-color: white !important;
 
+  :global(.bp3-dialog-body){
+    overflow: auto;
+  }
+
   :global {
     .bp3-button {
       transition: color 0.3s, background 0.3s;
